# mario_sokoban

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: edition.h  error_helper.h  events.h  file_helper.h  game.h  utilities.h  windows.h
levels/easy/: 1617432093special.txt  cage.txt  jungle.txt
levels/hard/: oasis.txt  prison.txt
levels/medium/: 594628952special.txt  garden.txt  market.txt
src/: edition.c  error_helper.c  events.c  file_helper.c  game.c  utilities.c  windows.c
